FIXED the overflowing in navbar

--- a/landing-page/scss/index.scss
+++ b/landing-page/scss/index.scss
@@ -2,7 +2,8 @@
     --animate-delay: 0.5s;
 }
 
-body {
+body,
+html {
     background: #131212;
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -36,6 +37,7 @@ body {
     z-index: 3;
     background-color: transparent;
     transition: all 300ms;
+    width: 100vw;
 
     .navbar-logo {
 
